maven/k8s/cicd.yaml
# Copyright 2015 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: cicd-maven-app
spec:
  replicas: 1
  template:
    metadata:
      name: backend
      labels:
        role: server
        app: cicd-maven-svc
    spec:
      containers:
      - name: server
        image: 10.5.197.144:9443/diamanti/cicd-maven:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
        readinessProbe:
          initialDelaySeconds: 50 
          httpGet:
            path: /
            port: 8080
        ports:
        - name: http
          containerPort: 8080
