maven/k8s/cicd-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: cicd-maven-svc 
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    role: server
    app: cicd-maven-svc
