maven/k8s/ha-lb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
spec:
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
        app: haproxy-ingress
#    annotations:     # If you plan on using a network other than the default you will need to uncomment these two lines
#      diamanti.com/endpoint0: '{"network":"default","perfTier":"high"}'
    spec:
      containers:
      - name: haproxy-ingress
        image: quay.io/jcmoraisjr/haproxy-ingress
        args:
        - --default-backend-service=$(POD_NAMESPACE)/default-http-backend  # here is where the default backend (the 404) is set
        #- --default-ssl-certificate=$(POD_NAMESPACE)/tls-secret   # here is where the secret is used
        - --configmap=$(POD_NAMESPACE)/haproxy-ingress # here is the configmap with  the haproxy configuration options
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress
  labels:
    app: haproxy-ingress
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: haproxy-ingress
