maven/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: maven-ingress
spec:
  rules:
  - host: maven.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cicd-maven-svc
          servicePort: 8080
